# openai-api-rust

./: Cargo.toml
src/: lib.rs
