[package]
name = "openai-api"
version = "0.1.5-alpha.0"
authors = ["Josh Kuhn <deontologician@gmail.com>"]
license-file = "LICENSE"
edition = "2018"
description = "OpenAI API library for rust"
homepage = "https://github.com/deontologician/openai-api-rust/"
repository = "https://github.com/deontologician/openai-api-rust/"
keywords = ["openai", "gpt3"]
categories = ["api-bindings", "asynchronous"]

[build]
rustdocflags = ["--all-features"]

[features]
default = ["sync", "async"]
sync = ["ureq"]
async = ["reqwest/blocking"]

[dependencies]
thiserror = "^1.0.22"
serde = { version = "^1.0.117", features = ["derive"] }
derive_builder = "^0.12.0"
log = "^0.4.11"

# Used by sync feature
ureq = { version = "^2.6.2", optional=true, features = ["json", "tls"] }
serde_json = { version="^1.0"}
# Used by async feature
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
mockito = "1.0.2"
maplit = "1.0.2"
tokio = { version = "1.27.0", features = ["full"]}
env_logger = "0.10.0"
serde_json = "^1.0"
